--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bulma-helpers": "^0.3.8",
     "gh-pages": "^2.0.1",
     "gridsome": "^0.6.0",
-    "vue-github-activity": "^2.1.1"
+    "vue-github-activity": "^2.1.1",
+    "vue-social-sharing": "^2.4.5"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
